<resources>
    <string name="app_name">Derik Hair</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_sair">Sair</string>
    <string name="action_logout">Sair</string>
    <string name="nav_clientes">Clientes</string>
    <string name="nav_funcionarios">Funcionarios</string>
    <string name="nav_financas">Finanças</string>
    <string name="nav_agenda">Agenda</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_closed">Fechar</string>
    <string name="nav_produtos">Produtos</string>
    <string name="nav_servicos">Serviços</string>
    <string name="API_KEY">AIzaSyDmuGgEuX_X14URgg34JrduTll-slDR-S4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_localizacao">Localização</string>
</resources>
